--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,13 +52,8 @@
   margin: 0;
 }
 
-html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
+  font-family: IBMPlexSerif;
   color: rgb(var(--foreground-rgb));
   background: url("/images/background.png");
   background-position: 50%;
@@ -66,6 +61,8 @@ body {
   background-size: cover;
   color: #373b64;
   height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 a {
@@ -88,4 +85,31 @@ footer {
   bottom: 0;
   width: 100%;
   text-align: center;
+}
+
+p {
+  font-weight: 500;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+  margin: 0;
+}
+
+button {
+  background-color: transparent;
+  background-image: none;
+  font-weight: 600;
+}
+
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
 }
