--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,6 +38,10 @@
     padding-left: 1.5rem /* 24px */;
     padding-right: 1.5rem /* 24px */;
   }
+
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
+  }
 }
 
 @media (min-width: 768px) {
@@ -52,6 +56,10 @@
 
   .heroImage {
     right: 20%;
+  }
+
+  .cardLayout {
+    grid-template-columns: repeat(2, minmax(0, 1fr)) !important;
   }
 }
 
@@ -69,10 +77,30 @@
   .heroImage {
     right: 20%;
   }
+
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+  }
 }
 
 @media (min-width: 1280px) {
   .main {
     margin-top: 7rem;
   }
+
+  .cardLayout {
+    grid-template-columns: repeat(3, minmax(0, 1fr)) !important;
+  }
+}
+
+.cardLayout {
+  display: grid;
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+  column-gap: 1.5rem;
+  row-gap: 1.5rem;
+}
+
+.card {
+  justify-content: center !important;
+  display: grid;
 }
