--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -104,3 +104,10 @@
   justify-content: center !important;
   display: grid;
 }
+.heading2 {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  padding-bottom: 2rem;
+  margin-top: 2rem;
+  color: var(--text-white-100);
+}
